@@ -2,6 +2,8 @@ This file documents the revision history for Perl web application Veduta.
 
 {{$NEXT}}
 
+    - Fix attributions of map sources
+
 0.0.15    2016-06-11 21:26:44+02:00 Europe/Berlin
 
     - Click on a marker with 1 view triggers a list sort
